tests/ui-fulldeps/session-diagnostic/subdiagnostic-derive.stderr
error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:51:1
   |
LL | #[label(no_crate_example)]
   | ^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:58:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:67:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:77:1
   |
LL | #[label = "..."]
   | ^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:86:9
   |
LL | #[label(bug = "...")]
   |         ^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:86:1
   |
LL | #[label(bug = "...")]
   | ^

error: derive(Diagnostic): unexpected literal in nested attribute, expected ident
  --> $DIR/subdiagnostic-derive.rs:96:9
   |
LL | #[label("...")]
   |         ^^^^^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:105:9
   |
LL | #[label(slug = 4)]
   |         ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:105:1
   |
LL | #[label(slug = 4)]
   | ^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:115:9
   |
LL | #[label(slug("..."))]
   |         ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:115:1
   |
LL | #[label(slug("..."))]
   | ^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:135:1
   |
LL | #[label()]
   | ^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:144:27
   |
LL | #[label(no_crate_example, code = "...")]
   |                           ^^^^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:153:27
   |
LL | #[label(no_crate_example, applicability = "machine-applicable")]
   |                           ^^^^^^^^^^^^^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:162:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:176:5
   |
LL |     #[bar]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:188:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:200:5
   |
LL |     #[bar = 4]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:212:5
   |
LL |     #[bar("...")]
   |     ^

error: derive(Diagnostic): only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:224:13
   |
LL |     #[label(code = "...")]
   |             ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:224:5
   |
LL |     #[label(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:253:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:250:1
   |
LL | #[label(no_crate_example)]
   | ^

error: derive(Diagnostic): `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive.rs:263:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:273:5
   |
LL |     #[bar]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:284:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:295:5
   |
LL |     #[bar("...")]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: derive(Diagnostic): a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:327:44
   |
LL | #[label(no_crate_example, no_crate::example)]
   |                                            ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:340:5
   |
LL |     #[primary_span]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:337:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:346:8
   |
LL | struct AG {
   |        ^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:383:46
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                              ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:383:32
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                ^^^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:401:5
   |
LL |     #[applicability]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:398:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive.rs:411:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:424:1
   |
LL | #[suggestion(no_crate_example)]
   | ^

error: derive(Diagnostic): invalid applicability
  --> $DIR/subdiagnostic-derive.rs:434:62
   |
LL | #[suggestion(no_crate_example, code = "...", applicability = "foo")]
   |                                                              ^^^^^

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:452:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:466:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:486:39
   |
LL | #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                       ^^^^^^^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:505:43
   |
LL |     #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                           ^^^^^^^

error: derive(Diagnostic): `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:528:5
   |
LL |     #[suggestion_part]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: derive(Diagnostic): `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:531:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:525:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: derive(Diagnostic): invalid nested attribute
  --> $DIR/subdiagnostic-derive.rs:540:42
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   |                                          ^^^^
   |
   = help: only `no_span`, `style` and `applicability` are valid nested attributes

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:540:1
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:550:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:558:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:567:5
   |
LL |     #[primary_span]
   |     ^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:564:1
   |
LL | #[multipart_suggestion(no_crate_example)]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:575:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:578:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `code` is the only valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:581:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^

error: derive(Diagnostic): expected `,`
  --> $DIR/subdiagnostic-derive.rs:581:27
   |
LL |     #[suggestion_part(foo = "bar")]
   |                           ^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:585:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:588:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:596:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:596:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^

error: derive(Diagnostic): `#[applicability]` has no effect if all `#[suggestion]`/`#[multipart_suggestion]` attributes have a static `applicability = "..."`
  --> $DIR/subdiagnostic-derive.rs:625:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:673:34
   |
LL |     #[suggestion_part(code("foo"))]
   |                                  ^

error: derive(Diagnostic): unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:673:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:683:41
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                                         ^

error: derive(Diagnostic): unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:683:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:693:30
   |
LL |     #[suggestion_part(code(3))]
   |                              ^

error: derive(Diagnostic): unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:693:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:703:29
   |
LL |     #[suggestion_part(code())]
   |                             ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:758:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:758:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:767:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:775:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "", style = "normal")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): invalid suggestion style
  --> $DIR/subdiagnostic-derive.rs:783:51
   |
LL | #[suggestion(no_crate_example, code = "", style = "foo")]
   |                                                   ^^^^^
   |
   = help: valid styles are `normal`, `short`, `hidden`, `verbose` and `tool-only`

error: derive(Diagnostic): expected `= "xxx"`
  --> $DIR/subdiagnostic-derive.rs:791:49
   |
LL | #[suggestion(no_crate_example, code = "", style = 42)]
   |                                                 ^

error: derive(Diagnostic): a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:799:48
   |
LL | #[suggestion(no_crate_example, code = "", style)]
   |                                                ^

error: derive(Diagnostic): expected `= "xxx"`
  --> $DIR/subdiagnostic-derive.rs:807:48
   |
LL | #[suggestion(no_crate_example, code = "", style("foo"))]
   |                                                ^

error: derive(Diagnostic): expected `,`
  --> $DIR/subdiagnostic-derive.rs:807:48
   |
LL | #[suggestion(no_crate_example, code = "", style("foo"))]
   |                                                ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:819:5
   |
LL |     #[primary_span]
   |     ^
   |
   = note: there must be exactly one primary span
   = help: to create a suggestion with multiple spans, use `#[multipart_suggestion]` instead

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:816:1
   |
LL | #[suggestion(no_crate_example, code = "")]
   | ^

error[E0433]: failed to resolve: you might be missing crate `core`
  --> $DIR/subdiagnostic-derive.rs:311:1
   |
LL | union AC {
   | ^^^^^ you might be missing crate `core`

error[E0433]: failed to resolve: you might be missing crate `core`
  --> $DIR/subdiagnostic-derive.rs:715:30
   |
LL |     #[suggestion_part(code = 3)]
   |                              ^ you might be missing crate `core`

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:67:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:162:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:176:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:188:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:200:7
   |
LL |     #[bar = 4]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:212:7
   |
LL |     #[bar("...")]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:273:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:284:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:295:7
   |
LL |     #[bar("...")]
   |       ^^^

error[E0425]: cannot find value `slug` in module `crate::fluent_generated`
  --> $DIR/subdiagnostic-derive.rs:125:9
   |
LL | #[label(slug)]
   |         ^^^^ not found in `crate::fluent_generated`

error[E0425]: cannot find value `__code_29` in this scope
  --> $DIR/subdiagnostic-derive.rs:709:10
   |
LL | #[derive(Subdiagnostic)]
   |          ^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the derive macro `Subdiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 86 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
